# PySpark

./: .gitignore  README.md  REQUIREMENTS.md  etl_pipeline.py  pyproject.toml  requirements.txt  testing.py
config/: spark-defaults.conf
data/processed/final_output/: combined_customer_data.csv  customers_consecutive_orders.csv  monthly_order_total.csv  monthly_sales_trend.csv  most_popular_product_per_country.csv  total_revenue_per_customer.csv
data/processed/final_output/OrderMonth=01/: .part-00000-8295e322-ec75-4f7b-859d-bac5c9e156a2.c000.snappy.parquet.crc  part-00000-8295e322-ec75-4f7b-859d-bac5c9e156a2.c000.snappy.parquet  (+14 more)
data/processed/final_output_csv/: OrderMonth=01.csv  OrderMonth=02.csv  OrderMonth=03.csv  OrderMonth=04.csv  OrderMonth=05.csv  OrderMonth=06.csv  OrderMonth=07.csv  OrderMonth=08.csv
data/processed/final_output_xlsx/: OrderMonth=01.xlsx  OrderMonth=02.xlsx  OrderMonth=03.xlsx  OrderMonth=04.xlsx  OrderMonth=05.xlsx  OrderMonth=06.xlsx  OrderMonth=07.xlsx  OrderMonth=08.xlsx  OrderMonth=09.xlsx  OrderMonth=10.xlsx  OrderMonth=12.xlsx
data/raw/: ~$online_retail.xlsx
docs/: OPTIMIZATION_STRATEGY.md
src/cleaning/: data_cleaner.py  deprecated_data_cleaner.py
src/ingestion/: data_converter.py  download_data.py
src/online_retail_etl/: __init__.py  acquisition.py  analytics.py  cleaning.py  cli.py  config.py  incremental.py  logging_utils.py  pipeline.py  spark.py  storage.py
src/transformation/: data_processing.py
tests/: conftest.py
tests/integration/: test_pipeline_incremental.py
tests/unit/: test_analytics.py  test_cleaning.py
(+176 files in other folders)
